--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
             <version>1.18.6</version>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.8.1</version>
+        </dependency>
 
     </dependencies>
 </project>
